Fix record form scroll on Safari. (#28)

--- a/asset/css/admin.css
+++ b/asset/css/admin.css
@@ -318,6 +318,7 @@
 
 .current-row {
   overflow-y: hidden;
+  height: 100%;
 }
 
 .edit .current-row {
@@ -335,7 +336,7 @@
   position: -webkit-sticky;
   position: sticky;
   top: 0px;
-  height: calc(100% - 96px);
+  height: auto;
 }
 
 .current-row.horizontal form {
